# magma

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  gazelle_python.yaml  go.work  go.work.sum  mypy.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bazel.yml  build_all.yml  cloud-workflow.yml  comment-pr-on-check-failure.yml  cwag-workflow.yml  cwf-operator.yml  dp-workflow.yml  feg-workflow.yml  golang-build-test.yml  lte-integ-test-magma-deb.yml  lte-integ-test.yml  magma-build-openvswitch.yml  pr_bot.yml  reviewdog-workflow.yml  test-accept.yml  test-dispatch.yml
bazel/: BUILD.bazel  python_packages.bzl  python_repositories.bzl  python_toolchain.bzl  third_party_repositories.bzl
cwf/cloud/go/: go.mod  go.sum
cwf/cloud/go/services/cwf/servicers/protected/: builder_servicer_test.go
cwf/gateway/: go.mod  go.sum
cwf/gateway/docker/go/: Dockerfile
cwf/k8s/cwf_operator/: go.mod  go.sum
cwf/k8s/cwf_operator/docker/: Dockerfile
docs/readmes/basics/: prerequisites.md
dp/cloud/go/: go.mod  go.sum
dp/cloud/go/active_mode_controller/internal/message_generator/sas/: grant_test.go
dp/cloud/go/protos/: cbsd.pb.go
dp/cloud/go/services/dp/obsidian/models/: cbsd_swaggergen.go  mutable_cbsd_swaggergen.go  paginated_logs_swaggergen.go
feg/cloud/go/: go.mod  go.sum
feg/cloud/go/protos/: go.mod
feg/gateway/: Makefile  go.mod  go.sum
feg/gateway/docker/go/: Dockerfile
feg/gateway/policydb/: serializers_test.go
feg/gateway/services/csfb/servicers/test/: csfb_sctp_integration_test.go  csfb_test.go
feg/gateway/services/s6a_proxy/servicers/: config.go
feg/gateway/services/s8_proxy/servicers/: s8_proxy_test.go
feg/gateway/services/session_proxy/servicers/: session_controller_test.go
feg/gateway/services/swx_proxy/: client_api_test.go
feg/gateway/services/testcore/hss/servicers/: hss_test.go
feg/gateway/services/testcore/pcrf/mock_pcrf/: mock_driven_pcrf_test.go
feg/gateway/services/testcore/vlr/servicers/: vlr_test.go
feg/gateway/tools/s6a_cli/: main.go
feg/gateway/tools/s8_cli/: main.go
feg/gateway/tools/swx_cli/: main.go
feg/radius/src/: go.mod
lte/cloud/go/: go.mod  go.sum
lte/cloud/go/services/lte/servicers/: provider_servicer_test.go
lte/gateway/: Vagrantfile  fabfile.py
lte/gateway/c/session_manager/: OperationalStatesHandler.cpp  OperationalStatesHandler.hpp  StoredState.cpp  StoredState.hpp
lte/gateway/c/session_manager/test/: test_stored_state.cpp
lte/gateway/c/upload_manager/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
lte/gateway/c/upload_manager/src/: sentry_crasher.cpp
lte/gateway/configs/: gateway.mconfig  magmad.yml
lte/gateway/configs/templates/: mme.conf.template
lte/gateway/deploy/: agw_install_ubuntu_vm.sh
lte/gateway/deploy/roles/magma/tasks/: main.yml
lte/gateway/deploy/roles/magma_deb/tasks/: main.yml
lte/gateway/deploy/roles/magma_deploy/tasks/: main.yml
lte/gateway/docker/: docker-compose.yaml  mme_event.sh  sctpd_event.sh
lte/gateway/docker/ghz/: Dockerfile
lte/gateway/python/: Makefile  WORKSPACE.bazel  requirements.in  requirements.txt  setup.py
lte/gateway/python/integ_tests/: defs.mk
lte/gateway/python/integ_tests/s1aptests/: s1ap_utils.py  s1ap_wrapper.py
lte/gateway/python/integ_tests/s1aptests/ovs/: rest_api.py
lte/gateway/python/magma/enodebd/: enodebd_iptables_rules.py  stats_manager.py
lte/gateway/python/magma/mobilityd/: BUILD.bazel  main.py
lte/gateway/python/magma/mobilityd/tests/: BUILD.bazel
lte/gateway/python/magma/pipelined/: directoryd_client.py  encoding.py  rpc_servicer.py
lte/gateway/python/magma/subscriberdb/: rpc_servicer.py
lte/gateway/python/magma/subscriberdb/protocols/: m5g_auth_servicer.py
lte/gateway/python/scripts/: generate_oai_config.py
lte/gateway/test/: fabfile.py
lte/protos/: BUILD.bazel  WORKSPACE.bazel
minidumper/: .bazelrc  CmakeLists.txt  _WORKSPACE.bazel  example.cpp  minidumper  minidumper.debug  upload.sh
orc8r/cloud/deploy/orc8r_deployer/docker/: Dockerfile
orc8r/cloud/deploy/roles/golang/tasks/: main.yml
orc8r/cloud/docker/controller/: Dockerfile
orc8r/cloud/go/: Makefile  go.mod  go.sum  tools.go
orc8r/cloud/go/blobstore/mocks/: Store.go  StoreFactory.go
orc8r/cloud/go/obsidian/swagger/v1/: swagger.yml
orc8r/cloud/go/obsidian/tests/: unit_test_proto_utils.go  unit_test_utils.go
orc8r/cloud/go/service/: service_test.go
orc8r/cloud/go/services/accessd/accessd/: main.go
orc8r/cloud/go/services/bootstrapper/bootstrapper/: main.go
orc8r/cloud/go/services/certifier/certifier/: main.go
orc8r/cloud/go/services/certifier/protos/: helpers.go
orc8r/cloud/go/services/configurator/configurator/: main.go
orc8r/cloud/go/services/configurator/servicers/: southbound.go
orc8r/cloud/go/services/configurator/storage/: sql.go  sql_entity_graph_helpers.go  sql_entity_load_helpers.go  sql_entity_write_helpers.go  sql_integ_test.go  sql_network_helpers.go  sql_test.go  storage.go
orc8r/cloud/go/services/ctraced/ctraced/: main.go
orc8r/cloud/go/services/device/device/: main.go
orc8r/cloud/go/services/directoryd/directoryd/: main.go
orc8r/cloud/go/services/metricsd/: client_api.go
orc8r/cloud/go/services/orc8r_worker/orc8r_worker/: main.go
orc8r/cloud/go/services/state/state/: main.go
orc8r/cloud/go/services/tenants/: client_api.go
orc8r/cloud/go/services/tenants/tenants/: main.go
orc8r/cloud/go/test_utils/: unit_test_proto_utils.go
orc8r/cloud/go/tracing/: tracing.go  tracing_db.go  tracing_hook.go
orc8r/cloud/test/: go.mod  go.sum
orc8r/gateway/c/common/config/: MConfigLoader.cpp
orc8r/gateway/go/: go.mod  go.sum
orc8r/gateway/python/: WORKSPACE.bazel
orc8r/gateway/python/magma/common/: BUILD.bazel
orc8r/gateway/python/magma/common/redis/: BUILD.bazel
orc8r/gateway/python/magma/configuration/: BUILD.bazel
orc8r/lib/go/: go.mod
orc8r/lib/go/protos/: go.mod  marshaler_test.go
orc8r/protos/: BUILD.bazel  WORKSPACE.bazel
orc8r/tools/ansible/roles/golang/tasks/: main.yml
orc8r/tools/fab/: vagrant.py
python_env/: pyvenv.cfg
(+24 files in other folders)
