# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")

# load("@bazel_gazelle//:def.bzl", "gazelle")
load("@python_deps//:requirements.bzl", "all_whl_requirements")
load("@rules_python//gazelle:def.bzl", "GAZELLE_PYTHON_RUNTIME_DEPS")
load("@rules_python//gazelle/manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python//gazelle/modules_mapping:def.bzl", "modules_mapping")


buildifier(
    name = "buildifier",
    lint_mode = "fix",
    lint_warnings = ["all"],
    mode = "fix",
)

buildifier_test(
    name = "check_starlark_format",
    size = "small",
    timeout = "short",
    srcs = ["//:starlark_files"],
    lint_mode = "warn",
    lint_warnings = ["-unused-variable"],
    verbose = True,
)

filegroup(
    name = "starlark_files",
    srcs = glob(
        include = [
            "**/*.BUILD",
            "**/*.bzl",
            "**/*.sky",
            "**/BUILD",
            "**/BUILD.*.bazel",
            "**/BUILD.*.oss",
            "**/BUILD.bazel",
            "**/WORKSPACE",
            "**/WORKSPACE.*.bazel",
            "**/WORKSPACE.*.oss",
            "**/WORKSPACE.bazel",
            "*.BUILD",
            "*.bzl",
            "*.sky",
            "BUILD.*.bazel",
            "BUILD.*.oss",
            "WORKSPACE.*.bazel",
            "WORKSPACE.*.oss",
        ],
        exclude = [
            "bazel-*/**",
            ".git/**",
            "go_repositories.bzl",  # generated file
        ],
    ),
)

# gazelle:prefix github.com/magma/magma
# gazelle:exclude .cache/
# gazelle:include orc8r/
# gazelle:exclude lte/gateway/python/integ_tests/
# gazelle:exclude lte/gateway/python/load_tests/
# gazelle:exclude feg/
# gazelle:exclude cwf/
# TODO: Remove when we move proto generation to bazel - this prevents gazelle from causing import issues in the meantime.
# gazelle:exclude **/*.proto/
gazelle(name = "gazelle")

modules_mapping(
    name = "modules_map",
    wheels = all_whl_requirements,
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_deps_repository_name = "python_deps",
    requirements = "//bazel/external:requirements.txt",
)
gazelle(
    name = "py_gazelle",
    data = GAZELLE_PYTHON_RUNTIME_DEPS,
    gazelle = "@rules_python//gazelle:gazelle_python_binary",
)
