load("@rules_python//python:defs.bzl", "py_binary", "py_library","py_runtime")
load("@subpar//:subpar.bzl", "par_binary")

py_runtime(
    name = "python-3.8",
)

par_binary(
    name = "mobilityd_par",
    srcs = glob(["*.py"]),  #["main.py"],
    # legacy_creat_init = False is required to fix issues in module import, see https://github.com/rules-proto-grpc/rules_proto_grpc/issues/145
    legacy_create_init = False,
    main = "main.py",
    visibility = ["//visibility:public"],
    # zip_safe = False enables shared libraries to be extracted to a temp folder, see https://github.com/google/subpar/issues/37
    zip_safe = False,
    deps = [
        ":ip_address_man",
        "//lte/protos:mconfigs_python_proto",
        "//lte/protos:subscriberdb_python_grpc",
        "//lte/protos:subscriberdb_python_proto",
        "//orc8r/gateway/python/magma/common/redis:client",
        "//orc8r/gateway/python/magma/configuration:service_configs",
    ],
)

py_binary(
    name = "mobilityd",
    srcs = glob(["*.py"]),
    # legacy_creat_init = False is required to fix issues in module import, see https://github.com/rules-proto-grpc/rules_proto_grpc/issues/145
    legacy_create_init = False,
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        ":ip_address_man",
        # "//lte/protos:mconfigs_python_proto",
        "@lte_proto//:mconfigs_python_proto",
        # "//lte/protos:subscriberdb_python_grpc",
        "@lte_proto//:subscriberdb_python_grpc",
        # "//lte/protos:subscriberdb_python_proto",
        "@lte_proto//:subscriberdb_python_proto",
        # "//orc8r/gateway/python/magma/common/redis:client",
        "@orc8r_python//magma/common/redis:client",
        # "//orc8r/gateway/python/magma/configuration:service_configs",
        "@orc8r_python//magma/configuration:service_configs",
    ],
)

py_library(
    name = "ip_address_man",
    srcs = ["ip_address_man.py"],
)
