load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "sentry",
    srcs = ["sentry.py"],
    deps = [
        requirement("sentry_sdk"),
        requirement("snowflake"),
        "//feg/protos:mconfigs_python_proto",
    ],
)

py_library(
    name = "metrics",
    srcs = ["metrics.py"],
    deps = [
        requirement("prometheus_client"),
    ],
)
